--- a/index.html
+++ b/index.html
@@ -401,6 +401,6 @@
 
   <script src="https://unpkg.com/gifler@latest/gifler.min.js"></script>
   <script src="./assets/js/main.bundle.js"></script>
-
+<script src="/hslo-features.js"></script>
 </body>
 </html>
