--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://hslo.gitlab.io/assets/endymion.css?c6e9fb9f4aa7ae304fbf" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ogar✘ - The Arena Awaits. Can You Dominate?</title>
+  <title>Ascending?</title>
   <link rel="icon" href="./assets/images/icon.ico" type="image/x-icon">
   <link href="./assets/css/main.css" rel="stylesheet">
   <!-- Toastr -->
