--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://hslo.gitlab.io/assets/endymion.css?c6e9fb9f4aa7ae304fbf" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ascending?</title>
+  <title>Ogar✘ - The Arena Awaits. Can You Dominate?</title>
   <link rel="icon" href="./assets/images/icon.ico" type="image/x-icon">
   <link href="./assets/css/main.css" rel="stylesheet">
   <!-- Toastr -->
@@ -106,8 +106,10 @@
             <i class="material-icons">visibility</i>
         </div>
         <div class="input-row">
-            <input class="input-field" id="tag" placeholder="Tag" maxlength="10">
-            <input class="input-field" id="nickname" placeholder="nickname" maxlength="14">
+          <input class="input-field" id="tag" placeholder="Tag" maxlength="10">
+          <input class="input-field" id="nick1" placeholder="Nickname 1" maxlength="14">
+          <input class="input-field" id="nick2" placeholder="Nickname 2" maxlength="14">
+      </div>
         </div>
         <div class="input-row">
             <input class="input-field" id="skin1" placeholder="Skin URL 1">
@@ -254,7 +256,7 @@
                   <span>Cursor tracking:</span>
                   <label class="toggle-switch">
                     <input type="checkbox" id="cursorTracking">
-                    <span class="slider"></span>
+                    <span cla ="slider"></span>
                   </label>
                 </div>
 
