--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://hslo.gitlab.io/assets/endymion.css?c6e9fb9f4aa7ae304fbf" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ogar✘ - The Arena Awaits. Can You Dominate?</title>
+  <title>Ascending</title>
   <link rel="icon" href="./assets/images/icon.ico" type="image/x-icon">
   <link href="./assets/css/main.css" rel="stylesheet">
   <!-- Toastr -->
@@ -84,10 +84,7 @@
           <div id="credits-menu" class="menu" style="display: none;">
               <div class="menu-title">Credits</div>
               <div class="credits-content">
-                  <p>Developed by: ring</p>
-                  <p>Special thanks to: [List of names or contributors]</p>
-                  <p>Assets from: [Source names, if any]</p>
-                  <p>Inspired by: [Optional inspiration or base]</p>
+                  <p>Developed by: Viscozy</p>
               </div>
               <div class="menu-buttons">
                   <button class="btn material-button" id="back-to-main">Back to Main Menu</button>
@@ -106,10 +103,8 @@
             <i class="material-icons">visibility</i>
         </div>
         <div class="input-row">
-          <input class="input-field" id="tag" placeholder="Tag" maxlength="10">
-          <input class="input-field" id="nick1" placeholder="Nickname 1" maxlength="14">
-          <input class="input-field" id="nick2" placeholder="Nickname 2" maxlength="14">
-      </div>
+            <input class="input-field" id="tag" placeholder="Tag" maxlength="10">
+            <input class="input-field" id="nickname" placeholder="nickname" maxlength="14">
         </div>
         <div class="input-row">
             <input class="input-field" id="skin1" placeholder="Skin URL 1">
@@ -256,7 +251,7 @@
                   <span>Cursor tracking:</span>
                   <label class="toggle-switch">
                     <input type="checkbox" id="cursorTracking">
-                    <span cla ="slider"></span>
+                    <span class="slider"></span>
                   </label>
                 </div>
 
