--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="icon">
                         <i class="material-icons">info</i>
                     </div>
-                    <div class="label">HorseClient</div>
+                    <div class="label">Ascending</div>
                 </div>
             </div>
             <div class="button right four" id="open-credits">
