--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 <div id="cf-turnstile" data-sitekey="0x4AAAAAAACWFDYFT_opGqX8"></div>
 
   <script src="https://unpkg.com/gifler@latest/gifler.min.js"></script>
-  <script src="https://github.com/zzzsmokes/asc-hslo/blob/master/assets/js/main.bundle.js"></script>
+  <script src="="./assets/js/main.bundle.js"></script>
 
 </body>
 </html>
