--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ascending</title>
   <link rel="icon" href="./assets/images/icon.ico" type="image/x-icon">
-  <link href="./assets/css/main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
   <!-- Toastr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
