--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ascending</title>
   <link rel="icon" href="./assets/images/icon.ico" type="image/x-icon">
-  <link href="main.css" rel="stylesheet">
+  <link href="./assets/css/main.css" rel="stylesheet">
   <!-- Toastr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
@@ -65,7 +65,7 @@
                     <div class="icon">
                         <i class="material-icons">info</i>
                     </div>
-                    <div class="label">Ascending</div>
+                    <div class="label">HorseClient</div>
                 </div>
             </div>
             <div class="button right four" id="open-credits">
@@ -84,7 +84,10 @@
           <div id="credits-menu" class="menu" style="display: none;">
               <div class="menu-title">Credits</div>
               <div class="credits-content">
-                  <p>Developed by: Viscozy</p>
+                  <p>Developed by: ring</p>
+                  <p>Special thanks to: [List of names or contributors]</p>
+                  <p>Assets from: [Source names, if any]</p>
+                  <p>Inspired by: [Optional inspiration or base]</p>
               </div>
               <div class="menu-buttons">
                   <button class="btn material-button" id="back-to-main">Back to Main Menu</button>
@@ -397,7 +400,7 @@
 <div id="cf-turnstile" data-sitekey="0x4AAAAAAACWFDYFT_opGqX8"></div>
 
   <script src="https://unpkg.com/gifler@latest/gifler.min.js"></script>
-  <script src="="./assets/js/main.bundle.js"></script>
+  <script src="./assets/js/main.bundle.js"></script>
 
 </body>
 </html>
