--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
             <div class="tabs-container">
               <div class="tab-content active" id="game-settings">
                 <div class="option">
+                        <span>Active players list:</span>
+                        <label class="toggle-switch">
+                          <input type="checkbox" id="showActivePlayers">
+                          <span class="slider"></span>
+                        </label>
+                      </div>
                   <span>Animation delay: <span class="slider-value" id="animationDelayValue">144</span></span>
                   <input type="range" class="setting-slider" id="animationDelay" min="10" max="200" value="140">
                 </div>
